kube/staging/08-worker-ruby.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-ruby
  namespace: palad-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-ruby
  template:
    metadata:
      labels:
        app: worker-ruby
    spec:
      serviceAccountName: palad-worker
      containers:
        - name: worker-ruby
          image: ghcr.io/palad-ai/palad-app-web:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "2000m"
              memory: "2Gi"
          command: ["bin/temporal_worker"]
